--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,5 @@
 body{
-	background: #d2d2c1 url('imagens/fundo.png');
+	background: #d2d2c1 url('interview2.jpg');
 	font: 16px Arial, Helvetica, sans-serif;
 }
 
